done block secure

--- a/index.html
+++ b/index.html
@@ -756,7 +756,38 @@
         </section>
       </div>
     </div>
-
+    <div class="secure">
+      <div class="secure-main">
+        <div class="secure-image">
+          <img
+            class="secure-image-set"
+            src="./images/secure/Secure-phone.svg"
+            alt=""
+          />
+        </div>
+        <div class="secure-text">
+          <p class="secure_title">Core features</p>
+          <p class="secure_descr">
+            Secure Payment Transaction System with #1 Ranking
+          </p>
+          <div class="secure-image-dubl">
+            <img
+              class="secure-image-set-dubl"
+              src="./images/secure/Secure-phone.svg"
+              alt=""
+            />
+          </div>
+          <p class="secure_text-descr">
+            Get your tests delivered at let home collect sample from the victory
+            of the managments that supplies best design system guidelines ever.
+            Get your tests delivered at let home collect sample.
+          </p>
+          <div class="secure_button">
+            <a href="#" class="secure_button-set">Get Started</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./js/jquery-3.6.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
     <script src="./js/loader.js"></script>
